--- a/reactjs/helloworld/helloworld.html
+++ b/reactjs/helloworld/helloworld.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-     <title>Reacy.js Hello Word Example without sysntax extension to javascript JSX</title>
+     <title>React.js Hello Word Example without sysntax extension to javascript JSX</title>
 	 <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
      <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   </head>
