--- a/typescript/helloworld/helloword.html
+++ b/typescript/helloworld/helloword.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Typescript Hello Word Example</title>
+<title>Typescript Hello World Example</title>
 </head>
 <body>
 <script src="helloworld.js"></script>
